# nextgen-ee-practicum-3

./: .gitignore  README.md  practicum_1_arena_65_power_flow.py  practicum_1_first_step_tutorial.py  practicum_2_time_series_calculation.ipynb  practicum_3_power_flow_with_pv.ipynb  pyproject.toml
data/: arena_raw_data_65.json  bijmer_arena_irradiance_week.npy  load_profile_dataset.json  pv_panel_area.json  pv_power_example.npy  serialize_tutorial_input.json  topo_graph.json
data/processed/: transformer_data_week.csv
plot_utils/: plot.py
